# vscmk

./: #builder.ui#  .gitignore  CMakeLists.txt  README.md  builder.ui  gtk_hello.c  main.cpp  open_vs_sln.bat  pack.bat  test.code-workspace  tool_palette.c
minimal/: CMakeLists.txt  minimal.cpp
